--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 text-center">
+            <a href="index.html"><img id="img" src="img/logo.png" alt=""/></a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="fixed" class="container align-items-center">
+      <div class="row ">
+        <div class="col ">
+          <nav>
+            <ul class="list  d-flex align-items-center">
+              <li><a href=""></a>home</li>
+              <li><a href=""></a>about</li>
+              <li><a href=""></a>wines</li>
+              <li><a href=""></a>shop</li>
+              <li><a href=""></a>contact</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <section>
+      <div class="container align-items-center">
+        <div class="row">
+          <div class="col-md-12 owl-carousel">
+            <div class="carousel"><img src="img/hero_1.jpg" /> 
+            </div>
+            <div class="carousel"><img src="img/img_2.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="texts">
+        
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 text-center">
-                    <a href="index.html"><img id="img" src="img/logo.png" alt=""></a>
+            <div class="row">
+                <div class="col-12">
+                        <h2>our products</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Commodi,percpitiacis!</p>
+                        <p ><a id="color" href="#"> View All Products <i class="fas fa-arrow-right"></i></a></p>
                 </div>
             </div>
         </div>
-    </header>
-   <div class="container">
-       <div class="row col-md-6 align-items-center">
-        <nav >
-            <ul class="list  d-flex align-items-center">
-                <li><a href=""></a>home</li>
-                <li><a href=""></a>about</li>
-                <li><a href=""></a>wines</li>
-                <li><a href=""></a>shop</li>
-                <li><a href=""></a>contact</li>
-            </ul>
-        </nav>
-       </div>
-   </div>
+    </section>
 
-
-
-
-
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="js/custom.js"></script>
+  </body>
 </html>
