--- a/home.html
+++ b/home.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <link
       rel="stylesheet"
@@ -47,25 +50,44 @@
       <div class="container align-items-center">
         <div class="row">
           <div class="col-md-12 owl-carousel">
-            <div class="carousel"><img src="img/hero_1.jpg" /> 
-            </div>
-            <div class="carousel"><img src="img/img_2.jpg" />
-            </div>
+            <div class="carousel"><img src="img/hero_1.jpg" /></div>
+            <div class="carousel"><img src="img/img_2.jpg" /></div>
           </div>
         </div>
       </div>
     </section>
     <section id="texts">
-        
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                        <h2>our products</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Commodi,percpitiacis!</p>
-                        <p ><a id="color" href="#"> View All Products <i class="fas fa-arrow-right"></i></a></p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>our products</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing
+              elit.Commodi,percpitiacis!
+            </p>
+            <p>
+              <a id="color" href="#">
+                View All Products <i class="fas fa-arrow-right"></i
+              ></a>
+            </p>
+          </div>
         </div>
+      </div>
+      <div class="container">
+      <div class="row flexbtl">
+        <div class="col-lg-4 ml-3 col-md-6 bootles">
+          <div class="">
+          <a href=""><img class="image-fluid" src="img/bootle1.png" alt=""/></a>
+        </div>
+        </div>
+        <div class="col-lg-4 ml-3 col-md-6 bootles">
+          <a href=""><img class="image-fluid" src="img/wine_1.png" alt=""/></a>
+        </div>
+        <div class="col-lg-4 ml-3 col-md-6 bootles">
+          <a href=""><img class="image-fluid" src="img/wine_3.png" alt=""/></a>
+        </div>
+      </div>
+    </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
