--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
     <section>
       <div class="container align-items-center">
         <div class="row">
-          <div class="col-md-12 owl-carousel">
+          <div class="col-md-12 owl-carousel" id="coruselHero">
             <div class="carousel"><img src="img/hero_1.jpg" /></div>
             <div class="carousel"><img src="img/img_2.jpg" /></div>
           </div>
@@ -67,27 +67,68 @@
             </p>
             <p>
               <a id="color" href="#">
-                View All Products <i class="fas fa-arrow-right"></i
+                View All Products <i class="fa fa-arrow-right"></i
               ></a>
             </p>
           </div>
         </div>
       </div>
       <div class="container">
-      <div class="row flexbtl">
-        <div class="col-lg-4 ml-3 col-md-6 bootles">
-          <div class="">
-          <a href=""><img class="image-fluid" src="img/bootle1.png" alt=""/></a>
+        <div class="row flexbtl">
+          <div class="col-lg-4 ml-3 col-md-6 bootles">
+            <a href=""
+              ><img class="image-fluid" src="img/bootle1.png" alt=""
+            /></a>
+            <h5>Trius cabernet France 2011</h5>
+            <span>$629</span>
+            <div class="hoverDiv">
+              <h3>Trius cabernet France 2011</h3>
+              <span><del>$900.00</del>$629.00</span>
+              <div class="stars">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <a href="#"><span></span>add to cart</a>
+            </div>
+          </div>
+          <div class="col-lg-4 ml-3 col-md-6 bootles">
+            <a href=""
+              ><img class="image-fluid" src="img/wine_1.png" alt=""
+            /></a>
+            <h5>Trius cabernet France 2011</h5>
+            <span>$629</span>
+          </div>
+          <div class="col-lg-4 ml-3 col-md-6 bootles">
+            <a href=""
+              ><img class="image-fluid" src="img/wine_3.png" alt=""
+            /></a>
+            <h5>Trius cabernet France 2011</h5>
+            <span>$629</span>
+          </div>
         </div>
-        </div>
-        <div class="col-lg-4 ml-3 col-md-6 bootles">
-          <a href=""><img class="image-fluid" src="img/wine_1.png" alt=""/></a>
-        </div>
-        <div class="col-lg-4 ml-3 col-md-6 bootles">
-          <a href=""><img class="image-fluid" src="img/wine_3.png" alt=""/></a>
+      </div>
+    </section>
+    <div class="bcg">
+      <div class="container">
+        <div class="row justify-content-center text-center align-items-center">
+          <div class="col-md-8">
+            <span>welcome</span>
+            <h2>wines for everyone</h2>
+          </div>
         </div>
       </div>
     </div>
+    <section>
+      <div class="container">
+        <div class="row owl-carousel" id="corusel1">
+         <div class="col-4  girl"><img src="img/person_1.jpg" alt=""><p>salam</p></div>
+         <div class="col-4  girl"><img src="img/person_2.jpg" alt=""><p>salam</p></div>
+         <div class="col-4  girl"><img src="img/person_3.jpg" alt=""><p>salam</p></div>
+        </div>
+      </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
