--- a/about.html
+++ b/about.html
@@ -37,25 +37,18 @@
         <div class="col ">
           <nav>
             <ul class="list  d-flex align-items-center">
-              <li><a href="">home</a></li>
-              <li><a href="about.html">about</a></li>
-              <li><a href="">wines</a></li>
-              <li><a href="">shop</a></li>
-              <li><a href="">contact</a></li>
+              <li><a href="home.html">home</a></li>
+              <li><a href=""></a>about</li>
+              <li><a href=""></a>wines</li>
+              <li><a href=""></a>shop</li>
+              <li><a href=""></a>contact</li>
             </ul>
           </nav>
         </div>
       </div>
     </div>
     <section>
-      <div class="container align-items-center">
-        <div class="row">
-          <div class="col-md-12 owl-carousel" id="coruselHero">
-            <div class="carousel"><img src="img/hero_1.jpg" /></div>
-            <div class="carousel"><img src="img/img_2.jpg" /></div>
-          </div>
-        </div>
-      </div>
+  
     </section>
     <section id="texts">
       <div class="container">
