--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <section>
-
+    <p>salam</p>
   </section>
 
   <div class="bcg  justify-content-center align-items-center">
