--- a/about.html
+++ b/about.html
@@ -1,156 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/about.css" />
+  </head>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/about.css" />
-</head>
-
-<body>
-  <header>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-12 text-center">
-          <a href="home.html"><img id="img" src="img/logo.png" alt="" /></a>
+  <body>
+    <header>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 text-center">
+            <a href="home.html"><img id="img" src="img/logo.png" alt=""/></a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="fixed" class="container align-items-center">
+      <div class="row ">
+        <div class="col-12 ">
+          <nav>
+            <ul class="list  d-flex align-items-center">
+              <li><a href="home.html">home</a></li>
+              <li><a href="about.html"></a>about</li>
+              <li><a href=""></a>wines</li>
+              <li><a href=""></a>shop</li>
+              <li><a href=""></a>contact</li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
-  </header>
-  <div id="fixed" class="container align-items-center">
-    <div class="row ">
-      <div class="col-12 ">
-        <nav>
-          <ul class="list  d-flex align-items-center">
-            <li><a href="home.html">home</a></li>
-            <li><a href="about.html"></a>about</li>
-            <li><a href=""></a>wines</li>
-            <li><a href=""></a>shop</li>
-            <li><a href=""></a>contact</li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </div>
-  <section>
-    <p>salam</p>
-  </section>
+    <section></section>
 
-  <div class="bcg  justify-content-center align-items-center">
+    <div class="bcg  justify-content-center align-items-center">
       <div class="overlay"></div>
-    <div class="container">
-      <div class="row justify-content-center text-center align-items-center">
-        <div class="col-md-8">
-          <span>welcome</span>
-          <h2>about us</h2>
+      <div class="container">
+        <div class="row justify-content-center text-center align-items-center">
+          <div class="col-md-8">
+            <span>welcome</span>
+            <h2>about us</h2>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="container about">
-    <div class="row">
-      <div class="col-6">
-        <img class="image-fluid" src="img/hero_1.jpg" alt="">
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
-        <h2>how we started</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, magnam. Nostrum molestias quo, officiis
-          officia maxime non cum iusto, debitis, ab magnam inventore magni ipsam eligendi? Saepe voluptatibus laudantium
-          ratione.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In itaque molestias pariatur assumenda consectetur
-          cupiditate est culpa minima ab sequi, tenetur nesciunt magnam dolor reprehenderit. Reiciendis quod alias
-          voluptatibus et.</p>
-      </div>
-    </div>
-  </div>
-  <div class="huge-div">
-    <div class="container ">
+    <div class="container about">
       <div class="row">
-        <div class="col-md-5 mr-auto">
-          <h2>wines for you all</h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, magnam. Nostrum molestias quo, officiis
-            officia maxime non cum iusto, debitis, ab magnam inventore magni ipsam eligendi? Saepe voluptatibus
-            laudantium ratione.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In itaque molestias pariatur assumenda consectetur
-            cupiditate est culpa minima ab sequi, tenetur nesciunt magnam dolor reprehenderit. Reiciendis quod alias
-            voluptatibus et.</p>
-        </div>
         <div class="col-6">
-          <img class="image-fluid" src="img/img_2.jpg" alt="">
+          <img class="image-fluid" src="img/hero_1.jpg" alt="" />
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-5 ">
+          <h2>how we started</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+            magnam. Nostrum molestias quo, officiis officia maxime non cum
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In itaque
+            molestias pariatur assumenda consectetur cupiditate est culpa minima
+          </p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="partOf">
-    <div class="container">
-      <div class="row">
-        <div class="col-4 align-items-center">
-          <h2>free shipping</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ad illo odit nemo laborum, ab distinctio expedita, perspiciatis corrupti perferendis labore voluptates sunt ducimus magnam velit cumque repudiandae </p>
+    <div class="huge-div">
+      <div class="container ">
+        <div class="row">
+          <div class="col-md-5 mr-auto">
+            <h2>wines for you all</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non,
+              magnam. Nostrum molestias quo, officiis officia maxime non cum
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In itaque
+              molestias pariatur assumenda consectetur cupiditate est culpa nom
+            </p>
+          </div>
+          <div class="col-6">
+            <img class="image-fluid" src="img/img_2.jpg" alt="" />
+          </div>
         </div>
-        <div class="col-4 align-items-center">
-          <h2>free return</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam perferendis itaque repellat obcaecati! Itaque quasi veritatis, iste quisquam accusamus iure non nam neque perferendis facilis vel, quae provident. </p>
-        </div>
-        <div class="col-4 align-items-center text-align-center">
+      </div>
+    </div>
+    <div class="partOf">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 align-items-center">
+            <span id="truck"><i class="fa fa-truck"></i></span>
+            <h2>free shipping</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ad
+              illo odit nemo laborum, ab distinctio expedita, perspiciatis
+              corrupti perferendis labore voluptates sunt ducimus magnam velit
+              cumque repudiandae
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 align-items-center">
+            <span id="return"><i class="fa fa-redo"></i></span>
+            <h2>free return</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Quibusdam perferendis itaque repellat obcaecati! Itaque quasi
+              veritatis, iste quisquam accusamus iure non nam neque perferendis
+              facilis vel, quae provident.
+            </p>
+          </div>
+          <div class="col-4 align-items-center text-align-center">
+            <span id="support"><i class="fa fa-question"></i></span>
             <h2>customer support</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At architecto quia veniam porro inventore. Laudantium accusamus rerum soluta omnis consequuntur harum debitis ullam asperiores assumenda? Quia inventore </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+              architecto quia veniam porro inventore. Laudantium accusamus rerum
+              soluta omnis consequuntur harum debitis ullam asperiores
+              assumenda? Quia inventore
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-
-
-
-  <section class="huge-div">
-    <div class="container">
-      <div class="row owl-carousel" id="corusel2">
-        <div class="col-12  girl"><img src="img/person_1.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, aliquid illum amet ipsam similique nihil repudiandae, blanditiis necessitatibus veniam expedita modi cupiditate quaerat, labore minima in numquam ac!</p>
-        </div>
-        <div class="col-12 girl"><img src="img/person_2.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, porro nulla neque, quos quas ipsum error repellat facere rerum laborum aliquam debitis et suscipit, eius cumque omnis praesentium iure laboriosam!</p>
-        </div>
-        <div class="col-12 girl"><img src="img/person_3.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, porro nulla neque, quos quas ipsum error repellat facere rerum laborum aliquam debitis et suscipit, eius cumque omnis praesentium iure laboriosam!</p>
+    <section class="huge-div">
+      <div class="container">
+        <div class="row owl-carousel" id="corusel2">
+          <div class="col-12  girl">
+            <img src="img/person_1.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, aliquid illum amet ipsam similique nihil repudiandae,
+              blanditiis necessitatibus veniam expedita modi cupiditate quaerat,
+              labore minima in numquam ac!
+            </p>
+          </div>
+          <div class="col-12 girl">
+            <img src="img/person_2.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+              porro nulla neque, quos quas ipsum error repellat facere rerum
+              laborum aliquam debitis et suscipit, eius cumque omnis praesentium
+              iure laboriosam!
+            </p>
+          </div>
+          <div class="col-12 girl">
+            <img src="img/person_3.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+              porro nulla neque, quos quas ipsum error repellat facere rerum
+              laborum aliquam debitis et suscipit, eius cumque omnis praesentium
+              iure laboriosam!
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <div class="footer">
+    </section>
+    <div class="footer">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="social-icons">
-              <a href="#"><span class="icon-facebook"><i class="fa fa-facebook"></i></span></a>
-              <a href="#"><span class="icon-twitter"><i class="fa fa-twitter"></i></span></a>
-              <a href="#"><span class="icon-youtube"><i class="fa fa-youtube"></i></span></a>
-              <a href="#"><span class="icon-instagram"><i class="fa fa-instagram"></i></span></a>
+              <a href="#"
+                ><span class="icon-facebook"
+                  ><i class="fa fa-facebook"></i></span
+              ></a>
+              <a href="#"
+                ><span class="icon-twitter"><i class="fa fa-twitter"></i></span
+              ></a>
+              <a href="#"
+                ><span class="icon-youtube"><i class="fa fa-youtube"></i></span
+              ></a>
+              <a href="#"
+                ><span class="icon-instagram"
+                  ><i class="fa fa-instagram"></i></span
+              ></a>
             </div>
             <div class="col-12">
-              <p>Copyright &copy;2019 All rights reserved This template is made with sleepless nights by Djavid! <i
-                  class="fa fa-heart"></i> </p>
+              <p>
+                Copyright &copy;2019 All rights reserved This template is made
+                with sleepless nights by Djavid! <i class="fa fa-heart"></i>
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="js/custom.js"></script>
-</body>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
