--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <ul class="list  d-flex align-items-center">
               <li><a href="home.html">home</a></li>
               <li><a href="about.html"></a>about</li>
-              <li><a href=""></a>wines</li>
+              <li><a href="wines.html"></a>wines</li>
               <li><a href=""></a>shop</li>
               <li><a href=""></a>contact</li>
             </ul>
@@ -46,7 +46,8 @@
         </div>
       </div>
     </div>
-    <section></section>
+    <hr>
+    <!-- <section></section> -->
 
     <div class="bcg  justify-content-center align-items-center">
       <div class="overlay"></div>
@@ -206,5 +207,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/sticky.js"></script>
   </body>
 </html>
