--- a/home.html
+++ b/home.html
@@ -25,19 +25,20 @@
   </header>
   <div id="fixed" class="container align-items-center">
     <div class="row ">
-      <div class="col ">
+      <div class="col-12 ">
         <nav>
           <ul class="list  d-flex align-items-center">
             <li><a href="home.html">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="">wines</a></li>
-            <li><a href="">shop</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="wines.html">wines</a></li>
+            <li><a href="wines.html">shop</a></li>
+            <li><a href="contact.html">contact</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </div>
+  <hr>
   <section>
     <div class="container align-items-center">
       <div class="row ">
@@ -267,6 +268,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="js/custom.js"></script>
+  <script src="js/sticky.js"></script>
 </body>
 
 </html>
