--- a/about.html
+++ b/about.html
@@ -34,26 +34,26 @@
     <div id="fixed" class="container align-items-center">
       <div class="row ">
         <div class="col-12 ">
-          <nav>
+          <nav class="top-bar">
             <ul class="list  d-flex align-items-center">
               <li><a href="home.html">home</a></li>
               <li><a href="about.html"></a>about</li>
               <li><a href="wines.html"></a>wines</li>
-              <li><a href=""></a>shop</li>
-              <li><a href=""></a>contact</li>
+              <li><a href="wines.html"></a>shop</li>
+              <li><a href="contact.html"></a>contact</li>
             </ul>
           </nav>
         </div>
       </div>
     </div>
-    <hr>
+    <!-- <hr> -->
     <!-- <section></section> -->
 
     <div class="bcg  justify-content-center align-items-center">
       <div class="overlay"></div>
       <div class="container">
         <div class="row justify-content-center text-center align-items-center">
-          <div class="col-md-8">
+          <div class="col-md-8" style="top: 130px">
             <span>welcome</span>
             <h2>about us</h2>
           </div>
