--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
   <div id="fixed" class="container align-items-center">
     <div class="row ">
       <div class="col-12 ">
-        <nav>
+        <nav class="top-bar">
           <ul class="list  d-flex align-items-center">
             <li><a href="home.html">home</a></li>
             <li><a href="about.html">about</a></li>
@@ -38,7 +38,7 @@
       </div>
     </div>
   </div>
-  <hr>
+  <!-- <hr> -->
   <section>
     <div class="container align-items-center">
       <div class="row ">
