--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
               <li><a href="home.html">home</a></li>
               <li><a href="about.html"></a>about</li>
               <li><a href="wines.html"></a>wines</li>
-              <li><a href="wines.html"></a>shop</li>
+              <li><a href="shop.html"></a>shop</li>
               <li><a href="contact.html"></a>contact</li>
             </ul>
           </nav>
@@ -108,29 +108,26 @@
             <h2>free shipping</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ad
-              illo odit nemo laborum, ab distinctio expedita, perspiciatis
-              corrupti perferendis labore voluptates sunt ducimus magnam velit
-              cumque repudiandae
+              illo odit nemo labo, ab distinctio expedita, perspiciatis
+              corrupti perferendis labore 
             </p>
           </div>
-          <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 align-items-center">
-            <span id="return"><i class="fa fa-redo"></i></span>
+          <div class="col-4 top align-items-center">
+            <span id="return"><i class="fa fa-undo"></i></span>
             <h2>free return</h2>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Quibusdam perferendis itaque repellat obcaecati! Itaque quasi
-              veritatis, iste quisquam accusamus iure non nam neque perferendis
-              facilis vel, quae provident.
+              veritatis, iste quisquam 
             </p>
           </div>
-          <div class="col-4 align-items-center text-align-center">
+          <div class="col-4  align-items-center text-align-center">
             <span id="support"><i class="fa fa-question"></i></span>
             <h2>customer support</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. At
               architecto quia veniam porro inventore. Laudantium accusamus rerum
-              soluta omnis consequuntur harum debitis ullam asperiores
-              assumenda? Quia inventore
+              soluta omnis consequuntur 
             </p>
           </div>
         </div>
@@ -193,7 +190,7 @@
             <div class="col-12">
               <p>
                 Copyright &copy;2019 All rights reserved This template is made
-                with sleepless nights by Djavid! <i class="fa fa-heart"></i>
+                with sleepless nights by Djavid! <i id="heart" class="fa fa-heart"></i>
               </p>
             </div>
           </div>
