--- a/home.html
+++ b/home.html
@@ -84,15 +84,17 @@
           <span>$629</span>
           <div class="hoverDiv">
             <h3>Trius cabernet France 2011</h3>
-            <span><del>$900.00</del>$629.00</span>
+            <span>$629.00</span>
             <div class="stars">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
             </div>
-            <a href="#"><span></span>add to cart</a>
+            <div class="cart">
+            <a href="#"><span><i class="fa fa-shopping-bag"></i></span>add to cart</a>
+          </div>
           </div>
         </div>
         <div class="col-lg-4 ml-3 col-md-6 col-12 bootles">
@@ -103,13 +105,15 @@
             <h3>Trius cabernet France 2011</h3>
             <span><del>$900.00</del>$629.00</span>
             <div class="stars">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
             </div>
-            <a href="#"><span></span>add to cart</a>
+            <div class="cart">
+            <a href="#"><span><i class="fa fa-shopping-bag"></i></span>add to cart</a>
+          </div>
           </div>
         </div>
         <div class="col-lg-4 ml-3 col-md-6 col-12 bootles">
@@ -120,13 +124,15 @@
             <h3>Trius cabernet France 2011</h3>
             <span><del>$900.00</del>$629.00</span>
             <div class="stars">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
+              <span><i class="fa fa-star"></i></span>
             </div>
-            <a href="#"><span></span>add to cart</a>
+            <div class="cart">
+            <a href="#"><span><i class="fa fa-shopping-bag"></i></span>add to cart</a>
+          </div>
           </div>
         </div>
       </div>
@@ -255,7 +261,7 @@
           </div>
           <div class="col-12">
             <p>Copyright &copy;2019 All rights reserved This template is made with sleepless nights by Djavid! <i
-                class="fa fa-heart"></i> </p>
+             id="heart"   class="fa fa-heart"></i> </p>
           </div>
         </div>
       </div>
