--- a/contact.html
+++ b/contact.html
@@ -64,25 +64,25 @@
                 </div>
             </div>
 
-            <form>
+            <form id="validate">
                 <div class="row">
                     <div class="col-md-6">
                         <label for="">First name</label>
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="text" minlength="3" class="form-control" placeholder="First name" required>
                     </div>
                     <div class="col-md-6">
                         <label for="">Last name</label>
-                        <input type="text" class="form-control" placeholder="Last name">
+                        <input type="text" minlength="3" class="form-control" placeholder="Last name" required>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="">Email Adress</label>
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="email" class="form-control" placeholder="Email Adress" required>
                     </div>
                     <div class="col-md-6">
                         <label for="">Tel. Number</label>
-                        <input type="text" class="form-control" placeholder="Last name">
+                        <input type="text" class="form-control" placeholder="Tel. Number" required>
                     </div>
                 </div>
                 <div class="row">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="col-12">
                         <p>Copyright &copy;2019 All rights reserved This template is made with sleepless nights by
-                            Djavid! <i class="fa fa-heart"></i>
+                            Djavid! <i id="heart" class="fa fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -128,6 +128,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/sticky.js"></script>
 </body>
